changed collapsed video jingle call visuals, changed chat bottom avatar position, fixed send media and avatar picker modals content height

--- a/css/xabber.css
+++ b/css/xabber.css
@@ -618,10 +618,12 @@ body:not(.non-circle-avatars) .circle-avatar-wrap{
     width: 16vh;
     height: 12vh;
     cursor: pointer;
-    resize: both;
     overflow: hidden;
-    padding: 20px 8px 8px 8px;
-    background-color: #757575;
+    background-color: transparent;
+}
+
+.main-modal.collapsed.collapsed-video.multiple-videos{
+    height: 24vh;
 }
 
 .main-modal:not(.collapsed-video) .collapsed-movable {
@@ -629,10 +631,10 @@ body:not(.non-circle-avatars) .circle-avatar-wrap{
 }
 
 .main-modal.collapsed-video .collapsed-movable {
-    height: 20px;
+    height: 100%;
     width: 100%;
-    background-color: #757575;
     cursor: grabbing;
+    z-index: 1000;
     position: absolute;
     top: 0;
     left: 0;
@@ -6637,20 +6639,10 @@ input.input-glow.invalid,
 }
 .jingle-message-view.collapsed-video .video-wrap {
     position: relative;
-    background-color: #757575;
     display: flex !important;
     overflow: hidden;
     flex-direction: column;
     justify-content: space-evenly;
-}
-.jingle-message-view.collapsed-video video{
-    background-color: #757575 !important;
-    box-shadow: none !important;
-    height: unset !important;
-}
-
-.jingle-message-view.collapsed-video video.multiple-videos{
-    height: 50% !important;
 }
 
 .jingle-message-view.collapsed .default-screen,
@@ -6665,9 +6657,9 @@ input.input-glow.invalid,
 
 .jingle-message-view.collapsed.collapsed-video .webrtc-remote-video,
 .jingle-message-view.collapsed.collapsed-video .webrtc-local-video {
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
     width: 100%;
     height: 100%;
     position: relative;
@@ -9340,7 +9332,7 @@ img.fwd-img-preview {
 
 .message-input-panel .message-form {
     position: relative;
-    padding: 8px 64px 0 64px;
+    padding: 16px 64px 0 64px;
 }
 
 .message-input-panel .rich-textarea mention {
@@ -16786,8 +16778,8 @@ ul.restrictions-list-content>li {
 }
 
 .main-modal.avatar-picker .modal-content {
-    min-height: 200px;
-    height: 100%;
+    height: calc(100% - 141px);
+    max-height: unset;
     padding: 8px !important;
 }
 
